added projects structure

--- a/src/styles.less
+++ b/src/styles.less
@@ -5,6 +5,11 @@ a { cursor: pointer; }
     min-height: 320px;
 }
 
+.custom-image {
+    display: flex;
+    flex-direction: row;
+}
+
 .admin-nav {
     padding-top: 0;
     padding-bottom: 0;
