added projects + manager

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,8 +1,13 @@
 // global styles
+html, body, #app{
+    height: 100%;
+    width: 100%;
+}
 a { cursor: pointer; }
 
 .app-container {
     min-height: 320px;
+    height: auto;
 }
 
 .custom-image {
